end of week push

--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -1121,6 +1121,16 @@
 	year = {2007},
 }
 
+@article{frankham_importance_2004,
+	title = {The importance of time scale in conservation biology and ecology},
+	volume = {41},
+	issn = {0003-455X},
+	journal = {Annales Zoologici Fennici},
+	author = {Frankham, Richard and Brook, Barry W.},
+	year = {2004},
+	pages = {459--463},
+}
+
 @article{burkner_advanced_2018,
 	title = {Advanced {Bayesian} {Multilevel} {Modeling} with the {R} {Package} brms},
 	volume = {10},
@@ -1148,6 +1158,23 @@
 	author = {Wood, Simon N.},
 	year = {2017},
 	keywords = {Linear models (Statistics), R (Computer program language), Random walks (Mathematics)},
+}
+
+@article{liow_lower_2009,
+	title = {Lower {Extinction} {Risk} in {Sleep}-or-{Hide} {Mammals}},
+	volume = {173},
+	issn = {0003-0147, 1537-5323},
+	url = {https://www.journals.uchicago.edu/doi/10.1086/595756},
+	doi = {10.1086/595756},
+	language = {en},
+	number = {2},
+	urldate = {2020-02-11},
+	journal = {The American Naturalist},
+	author = {Liow, Lee Hsiang and Fortelius, Mikael and Lintulaakso, Kari and Mannila, Heikki and Stenseth, Nils Chr.},
+	month = feb,
+	year = {2009},
+	pages = {264--272},
+	file = {Submitted Version:C\:\\Users\\mezzinis\\Zotero\\storage\\92S2A4IG\\Liow et al. - 2009 - Lower Extinction Risk in Sleep‐or‐Hide Mammals.pdf:application/pdf},
 }
 
 @article{tingley_pyrodiversity_2016,
@@ -1184,6 +1211,23 @@
 	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\72Q6FHWP\\Berger et al. - 2018 - Climate Degradation and Extreme Icing Events Const.pdf:application/pdf},
 }
 
+@article{anderson_black-swan_2017,
+	title = {Black-swan events in animal populations},
+	volume = {114},
+	issn = {0027-8424, 1091-6490},
+	url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1611525114},
+	doi = {10.1073/pnas.1611525114},
+	language = {en},
+	number = {12},
+	urldate = {2020-01-24},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Anderson, Sean C. and Branch, Trevor A. and Cooper, Andrew B. and Dulvy, Nicholas K.},
+	month = mar,
+	year = {2017},
+	pages = {3252--3257},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\L5IQB8T6\\Anderson et al. - 2017 - Black-swan events in animal populations.pdf:application/pdf},
+}
+
 @article{logares_black_2012,
 	title = {Black {Swans} in ecology and evolution: {The} importance of improbable but highly influential events},
 	issn = {19183178},
@@ -1210,6 +1254,56 @@
 	year = {2018},
 	pages = {149},
 	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\GXCZYR2P\\Simpson - 2018 - Modelling Palaeoecological Time Series Using Gener.pdf:application/pdf},
+}
+
+@article{widmer_effects_2004,
+	title = {The effects of hurricane {Lothar} on habitat use of roe deer},
+	volume = {195},
+	issn = {03781127},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0378112704001446},
+	doi = {10.1016/j.foreco.2004.02.021},
+	language = {en},
+	number = {1-2},
+	urldate = {2020-02-12},
+	journal = {Forest Ecology and Management},
+	author = {Widmer, Olivier and Saı̈d, Sonia and Miroir, Jeremy and Duncan, Patrick and Gaillard, Jean-Michel and Klein, Francois},
+	month = jun,
+	year = {2004},
+	pages = {237--242},
+}
+
+@article{staver_tree_2011,
+	title = {Tree cover in sub-{Saharan} {Africa}: {Rainfall} and fire constrain forest and savanna as alternative stable states},
+	volume = {92},
+	issn = {0012-9658},
+	shorttitle = {Tree cover in sub-{Saharan} {Africa}},
+	url = {http://doi.wiley.com/10.1890/10-1684.1},
+	doi = {10.1890/10-1684.1},
+	language = {en},
+	number = {5},
+	urldate = {2020-03-16},
+	journal = {Ecology},
+	author = {Staver, A. Carla and Archibald, Sally and Levin, Simon},
+	month = may,
+	year = {2011},
+	pages = {1063--1072},
+}
+
+@article{hollings_trophic_2014,
+	title = {Trophic {Cascades} {Following} the {Disease}-{Induced} {Decline} of an {Apex} {Predator}, the {Tasmanian} {Devil}: {Ecosystem} {Effects} of {Devil} {Facial} {Tumor} {Disease}},
+	volume = {28},
+	issn = {08888892},
+	shorttitle = {Trophic {Cascades} {Following} the {Disease}-{Induced} {Decline} of an {Apex} {Predator}, the {Tasmanian} {Devil}},
+	url = {http://doi.wiley.com/10.1111/cobi.12152},
+	doi = {10.1111/cobi.12152},
+	language = {en},
+	number = {1},
+	urldate = {2020-02-11},
+	journal = {Conservation Biology},
+	author = {Hollings, Tracey and Jones, Menna and Mooney, Nick and Mccallum, Hamish},
+	month = feb,
+	year = {2014},
+	pages = {63--75},
 }
 
 @article{reed_frequency_2003,
@@ -1245,6 +1339,22 @@
 	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\AN5QX3ZY\\Foley et al. - 2008 - Severe drought and calf survival in elephants.pdf:application/pdf},
 }
 
+@article{nimmo_animal_2019,
+	title = {Animal movements in fire-prone landscapes},
+	volume = {94},
+	issn = {1464-7931, 1469-185X},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/brv.12486},
+	doi = {10.1111/brv.12486},
+	language = {en},
+	number = {3},
+	urldate = {2020-02-12},
+	journal = {Biological Reviews},
+	author = {Nimmo, Dale G. and Avitabile, Sarah and Banks, Sam C. and Bliege Bird, Rebecca and Callister, Kate and Clarke, Michael F. and Dickman, Chris R. and Doherty, Tim S. and Driscoll, Don A. and Greenville, Aaron C. and Haslem, Angie and Kelly, Luke T. and Kenny, Sally A. and Lahoz‐Monfort, José J. and Lee, Connie and Leonard, Steven and Moore, Harry and Newsome, Thomas M. and Parr, Catherine L. and Ritchie, Euan G. and Schneider, Kathryn and Turner, James M. and Watson, Simon and Westbrooke, Martin and Wouters, Mike and White, Matthew and Bennett, Andrew F.},
+	month = jun,
+	year = {2019},
+	pages = {981--998},
+}
+
 @article{matkin_ongoing_2008,
 	title = {Ongoing population-level impacts on killer whales {Orcinus} orca following the ‘{Exxon} {Valdez}’ oil spill in {Prince} {William} {Sound}, {Alaska}},
 	volume = {356},
@@ -1253,6 +1363,33 @@
 	author = {Matkin, Craig and Saulitis, E and Ellis, G and Olesiuk, Peter and Rice, S},
 	year = {2008},
 	pages = {269--281},
+}
+
+@article{murray_pathogens_2006,
+	title = {Pathogens, nutritional deficiency, and climate influences on a declining moose population},
+	volume = {166},
+	number = {1},
+	journal = {Wildlife Monographs},
+	author = {Murray, Dennis L and Cox, Eric W and Ballard, Warren B and Whitlaw, Heather A and Lenarz, Mark S and Custer, Thomas W and Barnett, Terri and Fuller, Todd K},
+	year = {2006},
+	pages = {1--30},
+}
+
+@article{gienapp_climate_2008,
+	title = {Climate change and evolution: disentangling environmental and genetic responses},
+	volume = {17},
+	issn = {09621083, 1365294X},
+	shorttitle = {Climate change and evolution},
+	url = {http://doi.wiley.com/10.1111/j.1365-294X.2007.03413.x},
+	doi = {10.1111/j.1365-294X.2007.03413.x},
+	language = {en},
+	number = {1},
+	urldate = {2020-02-14},
+	journal = {Molecular Ecology},
+	author = {Gienapp, P. and Teplitsky, C. and Alho, J. S. and Mills, J. A. and Merilä, J.},
+	month = jan,
+	year = {2008},
+	pages = {167--178},
 }
 
 @article{harestad_home_1979,
@@ -3959,4 +4096,40 @@
 	month = jun,
 	year = {1985},
 	pages = {876--888},
+}
+
+@article{grant_evolution_2017,
+	title = {Evolution caused by extreme events},
+	volume = {372},
+	issn = {0962-8436, 1471-2970},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rstb.2016.0146},
+	doi = {10.1098/rstb.2016.0146},
+	abstract = {Extreme events can be a major driver of evolutionary change over geological and contemporary timescales. Outstanding examples are evolutionary diversification following mass extinctions caused by extreme volcanism or asteroid impact. The evolution of organisms in contemporary time is typically viewed as a gradual and incremental process that results from genetic change, environmental perturbation or both. However, contemporary environments occasionally experience strong perturbations such as heat waves, floods, hurricanes, droughts and pest outbreaks. These extreme events set up strong selection pressures on organisms, and are small-scale analogues of the dramatic changes documented in the fossil record. Because extreme events are rare, almost by definition, they are difficult to study. So far most attention has been given to their ecological rather than to their evolutionary consequences. We review several case studies of contemporary evolution in response to two types of extreme environmental perturbations, episodic (pulse) or prolonged (press). Evolution is most likely to occur when extreme events alter community composition. We encourage investigators to be prepared for evolutionary change in response to rare events during long-term field studies.
+            This article is part of the themed issue ‘Behavioural, ecological and evolutionary responses to extreme climatic events’.},
+	language = {en},
+	number = {1723},
+	urldate = {2022-11-18},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	author = {Grant, Peter R. and Grant, B. Rosemary and Huey, Raymond B. and Johnson, Marc T. J. and Knoll, Andrew H. and Schmitt, Johanna},
+	month = jun,
+	year = {2017},
+	pages = {20160146},
+	file = {Full Text:C\:\\Users\\mezzinis\\Zotero\\storage\\IWRS7JEK\\Grant et al. - 2017 - Evolution caused by extreme events.pdf:application/pdf},
+}
+
+@article{alston_temperature_2020,
+	title = {Temperature shapes movement and habitat selection by a heat-sensitive ungulate},
+	volume = {35},
+	issn = {0921-2973, 1572-9761},
+	url = {https://link.springer.com/10.1007/s10980-020-01072-y},
+	doi = {10.1007/s10980-020-01072-y},
+	language = {en},
+	number = {9},
+	urldate = {2022-11-18},
+	journal = {Landscape Ecology},
+	author = {Alston, Jesse M. and Joyce, Michael J. and Merkle, Jerod A. and Moen, Ron A.},
+	month = sep,
+	year = {2020},
+	pages = {1961--1973},
+	file = {Submitted Version:C\:\\Users\\mezzinis\\Zotero\\storage\\EPYDSSBW\\Alston et al. - 2020 - Temperature shapes movement and habitat selection .pdf:application/pdf},
 }
